# MiniWorld-API-Desc

./: .gitignore  .vscodeignore  MNDeclaration.d.lua  Merge.py  README.en.md  README.md  pack.ps1  package-lock.json  package.json  pyproject.toml  tool.py  tsconfig.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature.yml
AiDesc/: MNAiDesc.txt  UGC.md
AiDesc/2.0/: MNAiDesc.txt
AiDesc/3.0/: AiDesc.md  MNAiDesc.txt
addon/: README.md
addon/src/: apiSearch.ts  declarationManager.ts  eventCompletion.ts  extension.ts
addon/types/: MNDeclaration.d.lua
addon/webview/: script.js  search.html  style.css
complete/: .vscode-test.mjs
complete/src/: extension.ts
complete/types/: MNDeclaration.d.lua
multiple/: MNActor.d.lua  MNArea.d.lua  MNArray.d.lua  MNBackpack.d.lua  MNBlock.d.lua  MNBuff.d.lua  MNChat.d.lua  MNComponent.d.lua  MNCustomUI.d.lua  MNData.d.lua  MNEnumLib.d.lua  MNEvent.d.lua  MNGameObject.d.lua  MNGlobalFunc.d.lua  MNGraphics.d.lua  MNItem.d.lua  MNMap.d.lua  MNMod.d.lua  MNMosnter.d.lua  MNPlayer.d.lua  MNTable.d.lua  MNTimer.d.lua  MNWorld.d.lua  MNWorldContainer.d.lua
multiple/2.0/: MNBackpack.d.lua  MNBuff.d.lua  MNCloudSever.d.lua  MNDisPlayBoard.d.lua  MNEnumLib.d.lua  MNEvent.d.json  MNSpawnport.d.lua
multiple/3.0/: MNActor.d.lua  MNArea.d.lua  MNBackpack.d.lua  MNBlock.d.lua  MNBuff.d.lua  MNChat.d.lua  MNComponent.d.lua  MNCustomUI.d.lua  MNData.d.lua  MNGameObject.d.lua  MNGlobalFunc.d.lua  MNGraphics.d.lua  (+6 more)
template/: lua.code-snippets
tools/: DescToAiDesc.py  EnumLibCompare.py  EventCompare.py  FuncCompare.py  Merge.py  out.py
(+19 files in other folders)
